src/Home.css
.top-bar {
    background-color: #2e2e2e;
    height: 40px;
    width: 100%;
    color: white;
    text-align: center;
    font-size: 22pt;
    font-weight: bold;
}

.start-quiz-button  {
    background-color: #60BD48;
}

.exercise-link {
    padding: 10px;

    /* text */
    text-align: center;
    text-decoration: none;
    color: black;
    font-size: 14pt;
}

.source-link {
    text-align: center;
    display: block;
    padding-top: 30px;
}

.three-exercise-container {
    display: flex;
    justify-content: space-evenly;

    padding-bottom: 20px;

    border-bottom: 1px solid #F0F0F0;
}

.three-exercise-container:last-child {
    border-bottom: none;
}

